src/test/resources/errors/if-condition.intp
if "test" {
  val x = x + 1
}